<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Don\'t Forget Your Groceries</string>
    <string name="add_button"> add grocery</string>
    <string name="add_grocery_image">add grocery image</string>
    <string name="enter_your_grocery">أدخل مشترياتك</string>
    <string name="submit_your_grocery">إضافة مشترياتك</string>
    <string name="quantity">الكمية</string>
    <string name="choose_photo">Choose Your Reminder</string>
    <string-array name="units">
        <item>----</item>
        <item>جنيه</item>
        <item>جرام</item>
        <item>كيلو</item>
    </string-array>
</resources>