<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:clipChildren="true"
    tools:context=".ui.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tbMain"
            layout="@layout/main_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_blue"
            android:paddingTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbMain"
            tools:listitem="@layout/list_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/light_blue"
            android:contentDescription="@string/add_button"
            android:src="@drawable/ic_baseline_add_24"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/bottomGroceryCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="-20dp"
            android:background="@drawable/bottom_rectangle"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingTop="20dp"
            android:paddingBottom="40dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rvList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnPhoto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/other"
                    android:contentDescription="@string/add_grocery_image"
                    android:padding="4dp" />

                <EditText
                    android:id="@+id/etiGrocery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="2"
                    android:autofillHints="@string/enter_your_grocery"
                    android:background="@drawable/rectangle"
                    android:hint="@string/enter_your_grocery"
                    android:inputType="text"
                    android:paddingEnd="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textDirection="rtl"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etiQuantity"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:autofillHints="1"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:hint="@string/quantity"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/units"
                        android:gravity="center"
                        android:minHeight="48dp"
                        android:paddingStart="25dp"
                        android:paddingEnd="25dp"
                        tools:listheader="dfyg" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/submit_your_grocery"
                android:padding="16dp"
                android:text="@string/submit_your_grocery"
                android:textColor="@color/black"
                app:cornerRadius="25dp" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <View
            android:id="@+id/touch_outside"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            android:focusable="false"
            android:importantForAccessibility="no"
            android:soundEffectsEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/bottomGroceryCreate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPhotos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <include
            android:id="@+id/tbPhoto"
            layout="@layout/main_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--on below line we are creating a grid view-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbPhoto">

            <GridView
                android:id="@+id/idGRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:horizontalSpacing="6dp"
                android:numColumns="2"
                android:verticalSpacing="6dp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>